Migrated system from Bootstrap 3.4 to 5.3

--- a/app/assets/stylesheets/contact.css.scss
+++ b/app/assets/stylesheets/contact.css.scss
@@ -2,12 +2,12 @@ div.contact-us {
 
   input, select {
     border-radius: 30px 30px 30px 30px;
-    #background-color: rgba(186, 203, 231, 0.3);
-    #color: #002D59;
+    background-color: rgba(186, 203, 231, 0.3);
+    color: #002D59;
   }
   textarea {
-    #background-color: rgba(186, 203, 231, 0.3);
-    #color: #002D59;
+    background-color: rgba(186, 203, 231, 0.3);
+    color: #002D59;
   }
 
   div.newsletter_checkbox {
