--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -10,12 +10,16 @@
  * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
  * file per style scope.
  *
- *= require_tree .
- *= require_self
  */
-
-@import "bootstrap-sprockets";
+@import "*";
 @import "bootstrap";
+// @import "bootstrap-icons/font/bootstrap-icons";
+// @font-face {
+//   font-family: "bootstrap-icons";
+//   src: font-url("bootstrap-icons/font/fonts/bootstrap-icons.woff2") format("woff2"),
+//     font-url("bootstrap-icons/font/fonts/bootstrap-icons.woff") format("woff");
+// }
+
 
 #new_term .popover {
   max-width: 900px;
