--- a/app/views/homepage/index.html.erb
+++ b/app/views/homepage/index.html.erb
@@ -2,10 +2,12 @@
 <div class="col-sm-12 col-md-12">
   <%= image_tag("homosaurus_logo_max_with_plus.png", class: 'logo') %>
 </div>
-<div class="well col-sm-12 col-md-12 homepage_info">
+<div class="card col-sm-12 col-md-12 homepage_info">
+  <div class="card-body text-bg-light">
   <p>Welcome to the Homosaurus! The Homosaurus is an international linked data vocabulary of Lesbian, Gay, Bisexual, Transgender, and Queer (LGBTQ) terms. This vocabulary is intended to function as a companion to broad subject term vocabularies, such as the Library of Congress Subject Headings. Libraries, archives, museums, and other institutions are encouraged to use the Homosaurus to support LGBTQ research by enhancing the discoverability of their LGBTQ resources.</p>
 
   <p>If you are interested in purchasing some Homosaurus swag, please visit our <%= link_to "online shop", "https://homosaurus.threadless.com" %>. All proceeds are used to support the project or are donated to LGBTQ+ organizations.</p>
 
   <p>If you are using the Homosaurus, we want to hear from you! Please <%= link_to "contact us", contact_path %> to let us know how you are using this vocabulary and share any feedback you might have. One can also join our Google Group community at: <%= link_to "https://groups.google.com/g/homoitcommunity", "https://groups.google.com/g/homoitcommunity" %></p>
+</div>
 </div>
