--- a/app/views/homepage/about.html.erb
+++ b/app/views/homepage/about.html.erb
@@ -70,7 +70,29 @@
   <table class="table_with_image">
     <caption class="sr-only">List of editorial board</caption>
     <tbody>
-    <tr>
+    
+<tr>
+      <td>&nbsp;</td>
+      <td>
+        <div class="media">
+          <div class="media-left">
+            <%= image_tag("about/about_kalani_adolpho.png", class: 'hidden-xs') %>
+          </div>
+
+          <div class="media-body">
+          <h4 class="media-heading">
+            Keahi Kaʻiwalani Adolpho 
+          </h4>
+          <p>
+Kalani is a Processing Archivist at Virginia Commonwealth University Libraries and is a former Diversity Resident Librarian. They received their MLIS from University of Wisconsin-Milwaukee, as well as their BA in History. Kalani co-edited Trans and Gender Diverse Voices in Libraries published by Library Juice Press and co-created the Diversity Residency Toolkit as part of the ACRL Residency Interest Group. His research interests include trans and gender diverse inclusion in libraries and archives, reparative and ethical metadata, and diversity residencies.          </p>
+        </div>
+        </div>
+      </td>
+    </tr>
+
+
+
+<tr>
       <td>&nbsp;</td>
       <td>
         <div class="media">
