--- a/app/views/homepage/about.html.erb
+++ b/app/views/homepage/about.html.erb
@@ -102,10 +102,10 @@ Kalani is a Processing Archivist at Virginia Commonwealth University Libraries a
 
           <div class="media-body">
           <h4 class="media-heading">
-            Amber Billey
+            Billey Albina
           </h4>
           <p>
-            Amber Billey is the Systems & Metadata Librarian at Bard College. Prior to joining Bard, she was the Metadata Librarian at Columbia University Libraries where she worked on the LD4P project contributing to ontology development, tooling, and MARC to RDF mapping. Her research focuses on ethics and social justice in library metadata and information organization.
+            Billey Albina is the Systems & Metadata Librarian at Bard College. Prior to joining Bard, she was the Metadata Librarian at Columbia University Libraries where she worked on the LD4P project contributing to ontology development, tooling, and MARC to RDF mapping. Her research focuses on ethics and social justice in library metadata and information organization.
           </p>
         </div>
         </div>
