--- a/app/views/homepage/about.html.erb
+++ b/app/views/homepage/about.html.erb
@@ -76,7 +76,7 @@
       <td>
         <div class="media">
           <div class="media-left">
-            <%= image_tag("about/about_kalani_adolpho.png", class: 'hidden-xs') %>
+            <%= image_tag("about/about_kalani_adolpho.jpg", class: 'hidden-xs') %>
           </div>
 
           <div class="media-body">
